--- a/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-forgottenPasswordBody-bak.vm
+++ b/acerchem/acerchemcore/resources/acerchemcore/import/emails/email-forgottenPasswordBody-bak.vm
@@ -47,7 +47,7 @@
 									<td align="left" valign="top">
 									#set ($pswdRequestUrl = "${ctx.secureRequestResetPasswordUrl}")
 									#set ($mailToUrl = "mailto:${ctx.messages.contactUsEmailAddress}")
-									#if(${ctx.baseSite.Uid} == "acerchem")
+									#if(${ctx.baseSite.Uid} == "ingredients4u")
 									#set ( $paragraphContactUs = ${ctx.messages.getMessage('paragraphContactUs_acerchem', "#genHtmlLinkStartTag(${ctx.messages.contactUsPage})", "#genHtmlLinkEndTag()", "#genHtmlLink($mailToUrl '#666666' ${ctx.messages.contactUsEmailAddress})")} )
 									#else
 									#set ($faqPage = "${ctx.baseUrl}/faq")
